add hakari in work

--- a/index.html
+++ b/index.html
@@ -126,11 +126,29 @@
               <img class="activator" src="image/no_image.png">
             </div>
             <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">hakari</span>
+              <p >02.2016</p>
+            </div>
+            <div class="card-reveal">
+              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/hakari" target="_blank">hakari</a></h5>
+              <p>A Stress Test Tool for Web Application written in Golang.</p>
+              <p><strong>Easy to Install, Easy to Write Scenario.</strong></p>
+              <p>It takes only <strong>3 minutes</strong> from installing hakari to starting stress test.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="image/no_image.png">
+            </div>
+            <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">speedtest-go</span>
               <p >10.2015</p>
             </div>
             <div class="card-reveal">
-              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/speedtest-go/releases" target="_blank">speedtest-go</a></h5>
+              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/speedtest-go" target="_blank">speedtest-go</a></h5>
               <p>Command Line Interface to Test Internet Speed using speedtest.net.</p>
               <p>You can speedtest 2x faster than speedtest.net; nevertheless results are almost the same.</p>
             </div>
@@ -181,9 +199,10 @@
               <p >03.2014</p>
             </div>
             <div class="card-reveal">
-              <h5 class="promo-caption text_p"><a href="http://fc2play.com/" target="_blank">FC*FC Play</a></h5><b>**ADULT ONLY**</b>
+              <h5 class="promo-caption text_p"><a href="http://fc2play.com/" target="_blank">FC*FC Play</a></h5>
+              <b>**ADULT ONLY**</b>
               <p>Unlimited times video player of FC2 Video. </p>
-              <a href="https://github.com/showwin/FC2-Play/blob/master/README.md" target="_blank">See more details.</p>
+              <a href="https://github.com/showwin/FC2-Play/blob/master/README.md" target="_blank">See more details.</a>
             </div>
           </div>
         </div>
@@ -198,7 +217,7 @@
   <div class="container">
     <div class="footer-copyright default_color">
       <div class="container">
-        Copyright © 2015 Shogo ITO All Rights Reserved.
+        Copyright © 2016 Shogo ITO All Rights Reserved.
       </div>
     </div>
   </footer>
