--- a/indexjp.html
+++ b/indexjp.html
@@ -126,11 +126,29 @@
               <img class="activator" src="image/no_image.png">
             </div>
             <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">hakari</span>
+              <p >02.2016</p>
+            </div>
+            <div class="card-reveal">
+              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/hakari" target="_blank">hakari</a></h5>
+              <p>Webサイトの負荷検証コマンドラインツール</p>
+              <p><strong>Easy to Install, Easy to Write Scenario.</strong> をコンセプトにしており、インストールから負荷検証開始まで3分で可能。</p>
+              <p>リクエストのシナリオもYAML形式で書くことができ、特別なDSL等を覚える必要もない。</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 m4 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="image/no_image.png">
+            </div>
+            <div class="card-content">
               <span class="card-title activator grey-text text-darken-4">speedtest-go</span>
               <p >10.2015</p>
             </div>
             <div class="card-reveal">
-              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/speedtest-go/releases" target="_blank">speedtest-go</a></h5>
+              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/speedtest-go" target="_blank">speedtest-go</a></h5>
               <p>speedtest.net を利用してネットワーク速度を計測するコマンドラインツール。</p>
               <p>speedtest.net と同等の精度にも関わらず、約半分の時間で速度が計測できる。</p>
             </div>
@@ -181,9 +199,10 @@
               <p >03.2014</p>
             </div>
             <div class="card-reveal">
-              <h5 class="promo-caption text_p"><a href="http://fc2play.com/" target="_blank">FC*FC Play</a></h5><b>**18歳未満閲覧禁止**</b>
+              <h5 class="promo-caption text_p"><a href="http://fc2play.com/" target="_blank">FC*FC Play</a></h5>
+              <b>**18歳未満閲覧禁止**</b>
               <p>FC2動画の視聴制限を回避した動画再生プレイヤー。 </p>
-              <a href="https://github.com/showwin/FC2-Play/blob/master/README.md" target="_blank">詳しい情報はこちら</p>
+              <a href="https://github.com/showwin/FC2-Play/blob/master/README.md" target="_blank">詳しい情報はこちら</a>
             </div>
           </div>
         </div>
@@ -198,7 +217,7 @@
   <div class="container">
     <div class="footer-copyright default_color">
       <div class="container">
-        Copyright © 2015 Shogo ITO All Rights Reserved.
+        Copyright © 2016 Shogo ITO All Rights Reserved.
       </div>
     </div>
   </footer>
