--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
+          <h5 class="promo-caption text_b">Publication</h5>
+          <p class="light">Evaluating Skills of Crowd Workers Based on Awarded Contracts<br>　　<a href="http://showwin.asia">Shogo ITO</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~lindh/index.htm" target="_blank">Donghui LIN</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~ishida/index.htm" target="_blank">Toru ISHIDA</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
+        </div>
+      </div>
+      <div  class="col s12 m12 l12">
+        <div class="promo promo-example">
           <h5 class="promo-caption text_b">Work Experience</h5>
           <p class="light">04.2012 - 03.2015<br>　　Part-time Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
           <p class="light">08.2013 - 03.2014<br>　　Freelance Software Engineer (include 2-day Internship), <a href="http://maxis.ne.jp/" target="_blank">MAXIS Holdings</a></p>
