--- a/indexjp.html
+++ b/indexjp.html
@@ -55,6 +55,12 @@
       </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
+          <h5 class="promo-caption text_b">文献</h5>
+          <p class="light">受注履歴に基づくクラウドワーカーのスキル推定<br>　　<a href="http://showwin.asia">伊藤 勝梧</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~lindh/index.htm" target="_blank">林 冬惠</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~ishida/indexj.htm" target="_blank">石田 亨</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
+        </div>
+      </div>
+      <div  class="col s12 m12 l12">
+        <div class="promo promo-example">
           <h5 class="promo-caption text_b">職歴</h5>
           <p class="light">04.2012 - 03.2015<br>　　データベース管理エンジニア アルバイト, <a href="http://med-econ.umin.ac.jp/" target="_blank">京都大学 大学院医学研究科 医療経済学分野</a></p>
           <p class="light">08.2013 - 03.2014<br>　　ソフトウェアエンジニア フリーランス, <a href="http://maxis.ne.jp/" target="_blank">MAXIS ホールディングス</a></p>
