--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <p >06.2016</p>
             </div>
             <div class="card-reveal">
-              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/hakari" target="_blank">Disneyland Waiting Time</a></h5>
+              <h5 class="promo-caption text_p"><a href="http://disney.showwin.asia" target="_blank">Disneyland Waiting Time</a></h5>
               <p>Web Service to see how long the attraction waiting time was. Support 4 disney parks in Asia, including Shanghai Disneyland opened on June 2016.</p>
               <p>Support following parks:</p>
               <ul>
