--- a/indexjp.html
+++ b/indexjp.html
@@ -132,7 +132,7 @@
               <p >06.2016</p>
             </div>
             <div class="card-reveal">
-              <h5 class="promo-caption text_p"><a href="https://github.com/showwin/hakari" target="_blank">ディズニー混雑状況</a></h5>
+              <h5 class="promo-caption text_p"><a href="http://disney.showwin.asia" target="_blank">ディズニー混雑状況</a></h5>
               <p>2016年6月にオープンした上海ディズニーランドを含む、アジア圏4つのディズニーランドの混雑状況が確認できるWebサイト。</p>
               <p>対応パーク</p>
               <ul>
