update work experiences

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <p class="light">02.2014 - 05.2014<br>　　Software Enginering Internship, <a href="http://www.mbpsoft.com/#" target="_blank">罗特软件系统(杭州)有限公司</a>(China)</p>
           <p class="light">06.2014<br>　　5-day Enginering Internship, <a href="https://info.cookpad.com/" target="_blank">cookpad,Inc</a></p>
           <p class="light">09.2014 - 12.2014<br>　　Freelance Software Engineer, Developed Calendar Web App for Medical Doctor (for Individual)</p>
+          <p class="light">10.2015 - 03.2016<br>　　Freelance Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
           <p class="light">04.2015 - *<br>　　Server-side Engineer (Remote Working), <a href="http://mmmcorp.co.jp/" target="_blank">MMM Co., Ltd</a></p>
-          <p class="light">10.2015 - *<br>　　Freelance Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
         </div>
       </div>
     </div>
