--- a/indexjp.html
+++ b/indexjp.html
@@ -78,7 +78,8 @@
           <p class="light">06.2014<br>　　エンジニア職 5-dayインターンシップ, <a href="https://info.cookpad.com/" target="_blank">クックパッド株式会社</a></p>
           <p class="light">09.2014 - 12.2014<br>　　ソフトウェアエンジニア フリーランス, 医者向けの予定管理Webアプリケーション作成 (個人からの受託開発)</p>
           <p class="light">10.2015 - 03.2016<br>　　ソフトウェアエンジニア フリーランス, <a href="http://med-econ.umin.ac.jp/" target="_blank">京都大学 大学院医学研究科 医療経済学分野</a></p>
-          <p class="light">04.2015 - *<br>　　サーバーサイドエンジニア 正社員(リモートワーク), <a href="http://mmmcorp.co.jp/" target="_blank">株式会社MMM</a></p>
+          <p class="light">04.2015 - 10.2016<br>　　サーバーサイドエンジニア 正社員(リモートワーク), <a href="http://mmmcorp.co.jp/" target="_blank">株式会社MMM</a></p>
+          <p class="light">11.2016 - *<br>　　ソフトウェアエンジニア 正社員, <a href="https://www.freee.co.jp/" target="_blank">freee株式会社</a></p>
         </div>
       </div>
     </div>
