[add] change occupation

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
           <p class="light">09.2014 - 12.2014<br>　　Freelance Software Engineer, Developed Calendar Web App for Medical Doctor (for Individual)</p>
           <p class="light">10.2015 - 03.2016<br>　　Freelance Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
           <p class="light">04.2015 - 10.2016<br>　　Server-side Engineer (Remote Working), <a href="http://mmmcorp.co.jp/" target="_blank">MMM Co., Ltd</a></p>
-          <p class="light">11.2016 - *<br>　　Lead Engineer, <a href="http://scouty.co.jp/" target="_blank">scouty Inc.</a></p>
+          <p class="light">11.2016 - 06.2018<br>　　Lead Engineer, <a href="http://scouty.co.jp/" target="_blank">scouty Inc.</a></p>
+					<p class="light">07.2018 - * <br>　　CTO, <a href="http://scouty.co.jp/" target="_blank">scouty Inc.</a></p>
         </div>
       </div>
     </div>
