--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           <p class="light">09.2014 - 12.2014<br>　　Freelance Software Engineer, Developed Calendar Web App for Medical Doctor (for Individual)</p>
           <p class="light">10.2015 - 03.2016<br>　　Freelance Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
           <p class="light">04.2015 - 10.2016<br>　　Server-side Engineer (Remote Working), <a href="http://mmmcorp.co.jp/" target="_blank">MMM Co., Ltd</a></p>
-          <p class="light">11.2016 - 06.2018<br>　　Lead Engineer, <a href="http://scouty.co.jp/" target="_blank">scouty Inc.</a></p>
-					<p class="light">07.2018 - * <br>　　CTO, <a href="http://scouty.co.jp/" target="_blank">scouty Inc.</a></p>
+          <p class="light">11.2016 - 06.2018<br>　　Lead Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
+					<p class="light">07.2018 - * <br>　　CTO, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
         </div>
       </div>
     </div>
@@ -91,6 +91,12 @@
   <div class="container">
     <h2 class="header text_p"> Social </h2>
     <div class="row">
+      <div  class="col s12 m12 l12">
+        <div class="promo promo-example">
+          <h5 class="promo-caption text_b">LAPRAS</h5>
+          <p class="light"><a href="https://lapras.com/public/YOTRM10" target="_blank">showwin</a></p>
+        </div>
+      </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">GitHub</h5>
