--- a/indexjp.html
+++ b/indexjp.html
@@ -79,8 +79,8 @@
           <p class="light">09.2014 - 12.2014<br>　　ソフトウェアエンジニア フリーランス, 医者向けの予定管理Webアプリケーション作成 (個人からの受託開発)</p>
           <p class="light">10.2015 - 03.2016<br>　　ソフトウェアエンジニア フリーランス, <a href="http://med-econ.umin.ac.jp/" target="_blank">京都大学 大学院医学研究科 医療経済学分野</a></p>
           <p class="light">04.2015 - 10.2016<br>　　サーバーサイドエンジニア 正社員(リモートワーク), <a href="http://mmmcorp.co.jp/" target="_blank">株式会社MMM</a></p>
-          <p class="light">11.2016 - 06.2018<br>　　リードエンジニア 正社員, <a href="http://scouty.co.jp/" target="_blank">株式会社 scouty</a></p>
-					<p class="light">07.2018 - * <br>　　CTO 取締役, <a href="http://scouty.co.jp/" target="_blank">scouty Inc.</a></p>
+          <p class="light">11.2016 - 06.2018<br>　　リードエンジニア 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社(当時: 株式会社scouty)</a></p>
+					<p class="light">07.2018 - * <br>　　取締役CTO 役員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a></p>
         </div>
       </div>
     </div>
@@ -91,6 +91,12 @@
   <div class="container">
     <h2 class="header text_p"> Social </h2>
     <div class="row">
+      <div  class="col s12 m12 l12">
+        <div class="promo promo-example">
+          <h5 class="promo-caption text_b">LAPRAS</h5>
+          <p class="light"><a href="https://lapras.com/public/YOTRM10" target="_blank">showwin</a></p>
+        </div>
+      </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">GitHub</h5>
