--- a/indexjp.html
+++ b/indexjp.html
@@ -79,7 +79,7 @@
           <p class="light">09.2014 - 12.2014<br>　　ソフトウェアエンジニア フリーランス, 医者向けの予定管理Webアプリケーション作成 (個人からの受託開発)</p>
           <p class="light">10.2015 - 03.2016<br>　　ソフトウェアエンジニア フリーランス, <a href="http://med-econ.umin.ac.jp/" target="_blank">京都大学 大学院医学研究科 医療経済学分野</a></p>
           <p class="light">04.2015 - 10.2016<br>　　サーバーサイドエンジニア 正社員(リモートワーク), <a href="http://mmmcorp.co.jp/" target="_blank">株式会社MMM</a></p>
-          <p class="light">11.2016 - 06.2018<br>　　リードエンジニア 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社(当時: 株式会社scouty)</a></p>
+          <p class="light">11.2016 - 06.2018<br>　　リードエンジニア 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a>(当時: 株式会社scouty)</p>
 					<p class="light">07.2018 - * <br>　　取締役CTO 役員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a></p>
         </div>
       </div>
