--- a/indexjp.html
+++ b/indexjp.html
@@ -81,7 +81,7 @@
           <p class="light">04.2015 - 10.2016<br>　　サーバーサイドエンジニア 正社員(リモートワーク), <a href="http://mmmcorp.co.jp/" target="_blank">株式会社MMM</a></p>
           <p class="light">11.2016 - 06.2018<br>　　リードエンジニア 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a>(当時: 株式会社scouty)</p>
           <p class="light">07.2018 - 09.2020 <br>　　取締役CTO 役員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a></p>
-          <p class="light">10.2020 - * <br>　　Service Reliability Engineer 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a></p>
+          <p class="light">10.2020 - * <br>　　Site Reliability Engineer 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS 株式会社</a></p>
         </div>
       </div>
     </div>
