add medium and SUZURI

--- a/indexjp.html
+++ b/indexjp.html
@@ -118,8 +118,20 @@
       </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
+          <h5 class="promo-caption text_b">Medium</h5>
+          <p class="light"><a href="https://medium.com/@showwin" target="_blank">@showwin</a></p>
+        </div>
+      </div>
+      <div  class="col s12 m12 l12">
+        <div class="promo promo-example">
           <h5 class="promo-caption text_b">Blog</h5>
           <p class="light"><a href="http://showwin.hatenablog.com/" target="_blank">しょ〜うぃん広場</a></p>
+        </div>
+      </div>
+      <div  class="col s12 m12 l12">
+        <div class="promo promo-example">
+          <h5 class="promo-caption text_b">SUZURI</h5>
+          <p class="light"><a href="https://suzuri.jp/showwin" target="_blank">showwin</a></p>
         </div>
       </div>
     </div>
