--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
           <p class="light">04.2015 - 10.2016<br>　　Server-side Engineer (Remote Working), <a href="http://mmmcorp.co.jp/" target="_blank">MMM Co., Ltd</a></p>
           <p class="light">11.2016 - 06.2018<br>　　Lead Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
           <p class="light">07.2018 - 09.2020<br>　　CTO, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
-          <p class="light">10.2020 - * <br>　　Site Reliability Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
+          <p class="light">10.2020 - 10.2021<br>　　Site Reliability Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
+          <p class="light">11.2021 - * <br>　　Lead SRE, <a href="https://ovice.in/" target="_blank">oVice, Inc.</a></p>
         </div>
       </div>
     </div>
