fix links and remove short-term experience

--- a/index.html
+++ b/index.html
@@ -65,24 +65,22 @@
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">Publication</h5>
-          <p class="light">Evaluating Skills of Crowd Workers Based on Awarded Contracts<br>　　<a href="http://showwin.asia">Shogo ITO</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~lindh/index.htm" target="_blank">Donghui LIN</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~ishida/index.htm" target="_blank">Toru ISHIDA</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
+          <p class="light">Evaluating Skills of Crowd Workers Based on Awarded Contracts<br>　　<a href="http://showwin.asia">Shogo ITO</a>, <a href="https://lindh.github.io/" target="_blank">Donghui LIN</a>, <a href="https://en.wikipedia.org/wiki/Toru_Ishida" target="_blank">Toru ISHIDA</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
         </div>
       </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">Work Experience</h5>
-          <p class="light">04.2012 - 03.2015<br>　　Part-time Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
-          <p class="light">08.2013 - 03.2014<br>　　Freelance Software Engineer (include 2-day Internship), <a href="http://maxis.ne.jp/" target="_blank">MAXIS Holdings</a></p>
-          <p class="light">08.2013<br>　　3-day Enginering Internship, <a href="http://www.bebit.co.jp/" target="_blank">beBit,Inc</a></p>
+          <p class="light">04.2012 - 03.2015<br>　　Part-time Software Engineer, <a href="https://www.med.kyoto-u.ac.jp/en/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
           <p class="light">02.2014 - 05.2014<br>　　Software Enginering Internship, <a href="http://www.mbpsoft.com/#" target="_blank">罗特软件系统(杭州)有限公司</a>(China)</p>
-          <p class="light">06.2014<br>　　5-day Enginering Internship, <a href="https://info.cookpad.com/" target="_blank">cookpad,Inc</a></p>
-          <p class="light">09.2014 - 12.2014<br>　　Freelance Software Engineer, Developed Calendar Web App for Medical Doctor (for Individual)</p>
+          <p class="light">06.2014<br>　　5 days Enginering Internship, <a href="https://www.cookpadteam.com/" target="_blank">cookpad,Inc</a></p>
+          <p class="light">09.2014 - 12.2014<br>　　Freelance Software Engineer, Developed calendar Web app for medical doctors (for Individual)</p>
           <p class="light">10.2015 - 03.2016<br>　　Freelance Software Engineer, <a href="http://med-econ.umin.ac.jp/int/" target="_blank">Kyoto University Department of Healthcare Economics and Quality Management</a></p>
-          <p class="light">04.2015 - 10.2016<br>　　Server-side Engineer (Remote Working), <a href="http://mmmcorp.co.jp/" target="_blank">MMM Co., Ltd</a></p>
+          <p class="light">04.2015 - 10.2016<br>　　Server-side Engineer (Working Remotely), <a href="http://mmmcorp.co.jp/" target="_blank">MMM Co., Ltd</a></p>
           <p class="light">11.2016 - 06.2018<br>　　Lead Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
           <p class="light">07.2018 - 09.2020<br>　　CTO, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
           <p class="light">10.2020 - 10.2021<br>　　Site Reliability Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
-          <p class="light">11.2021 - * <br>　　Lead SRE, <a href="https://ovice.in/" target="_blank">oVice, Inc.</a></p>
+          <p class="light">11.2021 - * <br>　　Lead SRE (Working Remotely), <a href="https://ovice.in/" target="_blank">oVice, Inc.</a></p>
         </div>
       </div>
     </div>
