--- a/indexjp.html
+++ b/indexjp.html
@@ -65,17 +65,15 @@
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">文献</h5>
-          <p class="light">受注履歴に基づくクラウドワーカーのスキル推定<br>　　<a href="http://showwin.asia">伊藤 勝梧</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~lindh/index.htm" target="_blank">林 冬惠</a>, <a href="http://www.ai.soc.i.kyoto-u.ac.jp/~ishida/indexj.htm" target="_blank">石田 亨</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
+          <p class="light">受注履歴に基づくクラウドワーカーのスキル推定<br>　　<a href="http://showwin.asia">伊藤 勝梧</a>, <a href="https://lindh.github.io/" target="_blank">林 冬惠</a>, <a href="https://en.wikipedia.org/wiki/Toru_Ishida" target="_blank">石田 亨</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
         </div>
       </div>
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">職歴</h5>
           <p class="light">04.2012 - 03.2015<br>　　データベース管理エンジニア アルバイト, <a href="http://med-econ.umin.ac.jp/" target="_blank">京都大学 大学院医学研究科 医療経済学分野</a></p>
-          <p class="light">08.2013 - 03.2014<br>　　ソフトウェアエンジニア フリーランス, <a href="http://maxis.ne.jp/" target="_blank">MAXISホールディングス</a></p>
-          <p class="light">08.2013<br>　　エンジニア職 3-dayインターンシップ, <a href="http://www.bebit.co.jp/" target="_blank">株式会社ビービット</a></p>
           <p class="light">02.2014 - 05.2014<br>　　ソフトウェアエンジニア インターンシップ, <a href="http://www.mbpsoft.com/#" target="_blank">罗特软件系统(杭州)有限公司</a>(中国)</p>
-          <p class="light">06.2014<br>　　エンジニア職 5-dayインターンシップ, <a href="https://info.cookpad.com/" target="_blank">クックパッド株式会社</a></p>
+          <p class="light">06.2014<br>　　エンジニア職 5-daysインターンシップ, <a href="https://info.cookpad.com/" target="_blank">クックパッド株式会社</a></p>
           <p class="light">09.2014 - 12.2014<br>　　ソフトウェアエンジニア フリーランス, 医者向けの予定管理Webアプリケーション作成 (個人からの受託開発)</p>
           <p class="light">10.2015 - 03.2016<br>　　ソフトウェアエンジニア フリーランス, <a href="http://med-econ.umin.ac.jp/" target="_blank">京都大学 大学院医学研究科 医療経済学分野</a></p>
           <p class="light">04.2015 - 10.2016<br>　　サーバーサイドエンジニア 正社員(リモートワーク), <a href="http://mmmcorp.co.jp/" target="_blank">株式会社MMM</a></p>
