--- a/indexjp.html
+++ b/indexjp.html
@@ -53,7 +53,7 @@
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">名前</h5>
-          <p class="light">伊藤 勝梧 (ITO Shogo)</p>
+          <p class="light">ITO Shogo</p>
         </div>
       </div>
       <div  class="col s12 m12 l12">
@@ -65,7 +65,7 @@
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">文献</h5>
-          <p class="light">受注履歴に基づくクラウドワーカーのスキル推定<br>　　<a href="http://showwin.asia">伊藤 勝梧</a>, <a href="https://lindh.github.io/" target="_blank">林 冬惠</a>, <a href="https://en.wikipedia.org/wiki/Toru_Ishida" target="_blank">石田 亨</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
+          <p class="light">受注履歴に基づくクラウドワーカーのスキル推定<br>　　<a href="http://showwin.asia">Ito Shogo</a>, <a href="https://lindh.github.io/" target="_blank">林 冬惠</a>, <a href="https://en.wikipedia.org/wiki/Toru_Ishida" target="_blank">石田 亨</a><br>　　IEICE Technical Report, 2015, Vol.115, pp.19-24</p>
         </div>
       </div>
       <div  class="col s12 m12 l12">
