--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div  class="col s12 m12 l12">
         <div class="promo promo-example">
           <h5 class="promo-caption text_b">Name</h5>
-          <p class="light">Shogo ITO (伊藤 勝梧)</p>
+          <p class="light">Shogo ITO</p>
         </div>
       </div>
       <div  class="col s12 m12 l12">
