--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
           <p class="light">11.2016 - 06.2018<br>　　Lead Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
           <p class="light">07.2018 - 09.2020<br>　　CTO, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
           <p class="light">10.2020 - 10.2021<br>　　Site Reliability Engineer, <a href="https://corp.lapras.com/" target="_blank">LAPRAS Inc.</a></p>
-          <p class="light">11.2021 - * <br>　　Lead SRE (Working Remotely), <a href="https://ovice.in/" target="_blank">oVice, Inc.</a></p>
+          <p class="light">11.2021 - 07.2023 <br>　　Lead SRE (Remote), <a href="https://ovice.in/" target="_blank">oVice, Inc.</a></p>
+          <p class="light">08.2023 - * <br>　　Senior SRE (Remote), <a href="https://degica.com/" target="_blank">DEGICA Co., Ltd.</a></p>
         </div>
       </div>
     </div>
