--- a/indexjp.html
+++ b/indexjp.html
@@ -81,7 +81,8 @@
           <p class="light">07.2018 - 09.2020 <br>　　取締役CTO 役員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS株式会社</a></p>
           <p class="light">10.2020 - 10.2021 <br>　　Site Reliability Engineer 正社員, <a href="https://corp.lapras.com/" target="_blank">LAPRAS株式会社</a></p>
           <p class="light">11.2021 - 07.2023 <br>　　Lead SRE 正社員(リモート), <a href="https://ovice.in/ja/" target="_blank">oVice株式会社</a></p>
-          <p class="light">08.2023 - * <br>　　Senior SRE 正社員(リモート), <a href="https://degica.jp/" target="_blank">株式会社DEGICA</a></p>
+          <p class="light">08.2023 - 08.2024 <br>　　Senior SRE 正社員(リモート), <a href="https://degica.jp/" target="_blank">株式会社DEGICA</a></p>
+          <p class="light">08.2024 - * <br>　　Staff SRE 正社員(リモート), <a href="https://degica.jp/" target="_blank">株式会社DEGICA</a></p>
         </div>
       </div>
     </div>
